--- a/app/src/index.css
+++ b/app/src/index.css
@@ -118,3 +118,26 @@ button {
   background-color: #ff7a59; /* Highlight selected day */
   color: white;
 }
+
+
+/* Customize the scrollbar width */
+::-webkit-scrollbar {
+  width: 12px; /* Width of the entire scrollbar */
+}
+
+/* Style the scrollbar track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Color of the track */
+}
+
+/* Style the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color of the thumb */
+  border-radius: 6px;       /* Roundness of the thumb */
+  border: 3px solid #f1f1f1; /* Padding around thumb */
+}
+
+/* Hover effect for the scrollbar thumb */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Darker color on hover */
+}
