--- a/app/src/index.css
+++ b/app/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -42,7 +44,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -140,4 +141,20 @@ button {
 /* Hover effect for the scrollbar thumb */
 ::-webkit-scrollbar-thumb:hover {
   background-color: #555; /* Darker color on hover */
+}
+@layer base {
+  :root {
+    --radius: 0.5rem;
+  }
+}
+
+
+.rdrDefinedRangesWrapper{
+  display: none; 
+}
+
+.rdrDateRangePickerWrapper{
+  width: 1000px !important;
+  height: max-content;
+
 }
